# pycollada

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  COPYING  README  README.markdown  pyproject.toml  run_tests.py  setup.cfg  setup.py
.github/workflows/: python-package.yml
collada/: NewParam.py  SIDREF.py  __init__.py  __main__.py  animation.py  articulated_system.py  asset.py  camera.py  common.py  controller.py  doc.prj  extra.py  formula.py  geometry.py  joint.py  kinematics_model.py  kinematics_scene.py  light.py  lineset.py  link.py  material.py  newparam.py  physics_model.py  physics_scene.py  polygons.py  polylist.py  primitive.py  rigid_body.py  scene.py  schema.py  sidref.py  source.py  technique.py  transform.py  triangleset.py  util.py  xmlutil.py
collada/resources/: __init__.py  schema-1.4.1.xml
collada/tests/: test_asset.py  test_camera.py  test_collada.py  test_effect.py  test_geometry.py  test_ignore.py  test_iteration.py  test_kinematicsspec.py  test_light.py  test_lineset.py  test_material.py  test_scene.py  test_source.py
collada/tests/data/: README.md  barrett-wamhand.dae  empty_triangles.dae  empty_triangles_with_multiple_ns.dae  lab3external.dae  mug1.dae  mug1external.dae  tristrips.dae
docs/: Makefile  changelog.rst  conf.py  creating.rst  features.rst  index.rst  install.rst  intro.rst  loading.rst  rtd_requirements.txt  structure.rst
docs/api/: camera.rst  collada.rst  controller.rst  geometry.rst  index.rst  light.rst  lineset.rst  material.rst  polylist.rst  scene.rst  triangleset.rst
docs/reference/: asset.rst  bound.rst  camera.rst  controller.rst  exceptions.rst  geometry.rst  index.rst  light.rst  main.rst  material.rst  modules.rst  scene.rst  shapes.rst  source.rst  summary.rst  util.rst
examples/: check_collada.py  panda_display_collada.py  print_collada_info.py  recurse_check.py
examples/daeview/: README  daeview.py  requirements.txt
examples/daeview/renderer/: GLSLRenderer.py  OldStyleRenderer.py  __init__.py  glutils.py  shader.py  shaders.py
tests/: test_asset.py  test_camera.py  test_collada.py  test_geometry.py  test_iteration.py  test_light.py  test_lineset.py  test_material.py  test_scene.py  test_source.py
tests/data/: trifans.dae  wam.dae
