[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61",
]

[project]
name = "pycollada"
version = "0.9"
description = "python library for reading and writing collada documents"
readme = {file = "README.markdown", content-type = "text/markdown"}
authors = [
    {name = "Jeff Terrace and contributors", email = "jterrace@gmail.com"},
]
license = {text = "BSD"}
dependencies = [
    "python-dateutil>=2.2",
    "numpy",
    'unittest2; python_version<"2.7"',
]

[project.optional-dependencies]
prettyprint = ["lxml"]
validation = ["lxml"]

[project.urls]
Homepage = "http://pycollada.readthedocs.org/"

[tool.setuptools]
platforms = ["any"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
collada = ["resources/*.xml"]
